--- a/unpackaged/main/default/classes/SOM_Utils.cls
+++ b/unpackaged/main/default/classes/SOM_Utils.cls
@@ -10,16 +10,17 @@ public with sharing class SOM_Utils {
         return countryName;
     }
     
-
+    
     //Apply the AmountsFormat
     public static String getTotalFormatted(Decimal amountToFormat, String AmountsFormat ){
         Decimal input ;
-        if(amountToFormat!= null || amountToFormat.scale() > 2) {
-                input = amountToFormat.setScale(2, RoundingMode.HALF_UP);
-            }else if (amountToFormat == null) {
-                input = 0.00;
-            }
-            return formatDecimalNumber((input),AmountsFormat);
+        if(amountToFormat == null) {
+            input = 0.00;
+        }else if ( amountToFormat!= null || amountToFormat.scale() > 2) {
+            input = amountToFormat.setScale(2, RoundingMode.HALF_UP);
+            
+        }
+        return formatDecimalNumber((input),AmountsFormat);
     }
     
     //Apply the AmountsFormat
@@ -68,7 +69,7 @@ public with sharing class SOM_Utils {
             }
             
             valueToReturn = valueToReturn.removeEnd(',');
-			valueToReturn = valueToReturn + '.' + myDecimalString.substringafter('.');
+            valueToReturn = valueToReturn + '.' + myDecimalString.substringafter('.');
             
             Return valueToReturn;
             
