--- a/unpackaged/main/default/classes/WS_SOM_InvoiceDocument_Test.cls
+++ b/unpackaged/main/default/classes/WS_SOM_InvoiceDocument_Test.cls
@@ -5,21 +5,10 @@ public with sharing class WS_SOM_InvoiceDocument_Test {
     public static String setUpData(){
         List<OrderSummary> los = SOM_testDataFactory.createOrderSummaryBulk(false,SOM_testDataFactory.OrderType.Standard,1);
         FulfillmentOrder fo = SOM_testDataFactory.createFO(los[0]);
-        List<FulfillmentOrder> lFO = [SELECT Id,Status, DeliveryMethodId,OrderSummaryId,Type,FulfilledFromLocationId,FulfilledFromLocation.VisitorAddress.City,FulfilledFromLocation.VisitorAddress.Street,FulfilledFromLocation.VisitorAddress.PostalCode,
-        FulfilledFromLocation.VisitorAddress.State,FulfilledFromLocation.VisitorAddress.Country,
-        FulfilledToName,FulfilledToCity,FulfilledToStreet,FulfilledToPostalCode,FulfilledToState,FulfilledToCountry,
-                    (SELECT Id, FulfillmentOrderLineItemNumber, FulfillmentOrderId, Product2.StockKeepingUnit,
-                    OrderItemSummaryId, Quantity, Product2Id, OrderItemSummary.isSerialized__c FROM FulfillmentOrderLineItems WHERE Type !=: SOM_Constants.DELIVERY_CHARGE)
-                    FROM FulfillmentOrder WHERE OrderSummaryId = :los[0].id];
-        Map<Id, FulfillmentOrder> fotest = new Map<Id, FulfillmentOrder>(lFO);
+        Map<Id, FulfillmentOrder> fotest = SOM_testDataFactory.prepareFulfillmentOrderMap(los[0].id);
         Map<Id,Shipment> test = SOM_testDataFactory.createShipments(fotest);
-        List<OrderSummary> os = [SELECT Id, Status FROM OrderSummary WHERE Id =:los[0].Id];
         Invoice invoice = [SELECT Id , CreatedDate, ReferenceEntityId , InvoiceNumber__c , CurrencyIsoCode from Invoice where ReferenceEntity.type =: SOM_Constants.ORDER_SUMMARY_NAME AND ReferenceEntityId = :los[0].Id];
-        Attachment att = new Attachment();
-        att.Name = 'test Attachment';
-        att.ParentId = invoice.Id;
-        att.Body = Blob.valueOf('test blob');
-        insert att;
+        SOM_testDataFactory.createAttachment('test Attachment', invoice.Id, 'test blob');
         return invoice.Id;
     }
     
@@ -71,7 +60,7 @@ public with sharing class WS_SOM_InvoiceDocument_Test {
     }
     
     @isTest(seeAllData=true)
-    public static void doDeleteTestFail(){
+    public static void doDeleteTestFail(){ 
         String FakeInv = 'fakeId';
         RestRequest req = new RestRequest(); 
     	RestResponse res = new RestResponse();
